<resources>
    <string name="app_name">To Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_task_name">Task name</string>
    <string name="text_important_task">Important task</string>
    <string name="text_search">Search</string>
    <string name="text_setting">Setting</string>
    <string name="text_sort">Sort</string>
    <string name="text_sort_by_name">Sort by name</string>
    <string name="text_sort_by_date_created">Sort by date created</string>
    <string name="text_hide_completed">Hide completed</string>
    <string name="text_delete_all_completed">Delete all completed</string>
</resources>