<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search"
        android:title="@string/text_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/text_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_by_name_item"
                android:title="@string/text_sort_by_name" />
            <item
                android:id="@+id/sort_by_date_created_item"
                android:title="@string/text_sort_by_date_created" />
        </menu>
    </item>


    <item
        android:id="@+id/hide_completed_item"
        android:checkable="true"
        android:title="@string/text_hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_completed_item"
        android:title="@string/text_delete_all_completed"
        app:showAsAction="never" />


</menu>